--- a/ven.scss
+++ b/ven.scss
@@ -386,6 +386,30 @@ article {
       }
     }
   }
+  .seaPic {
+    width: 100%;
+    padding: 20px 5px;
+    display: none;
+    .seaTitle {
+      color: white;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      letter-spacing: 1px;
+      font-size: 20px;
+      margin-bottom: 20px;
+      span {
+        margin-left: 10px;
+      }
+    }
+    .seaPicAll {
+      width: 100%;
+      display: none;
+      img {
+        width: 100%;
+      }
+    }
+  }
 }
 @keyframes arrowMoveX {
   0% {
