--- a/ven.scss
+++ b/ven.scss
@@ -391,11 +391,13 @@ article {
     padding: 20px 5px;
     display: none;
     .seatotal,
-    .ramenTotal {
+    .ramenTotal,
+    .coffeeTotal {
       margin-bottom: 10px;
       border-bottom: 1px white solid;
       .seaTitle,
-      .ramenTitle {
+      .ramenTitle,
+      .coffeeTitle {
         color: white;
         display: flex;
         justify-content: center;
@@ -408,7 +410,8 @@ article {
         }
       }
       .seaPicAll,
-      .ramenPicAll {
+      .ramenPicAll,
+      .coffeePicAll {
         width: 100%;
         display: none;
         img {
