--- a/ven.css
+++ b/ven.css
@@ -3,10 +3,31 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+.firstShowPic {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  background-image: url("./importantPic.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.firstShowPic div {
+  border: 1px white solid;
+  padding: 10px 60px;
+  border-radius: 20px;
+  animation: firstBtn 5s infinite;
 }
 
 article {
-  display: flex;
+  display: none;
 }
 article .askQuestion {
   transition: 0.1s;
@@ -139,6 +160,9 @@ article .askQuestion3 .fixAnswers div {
   }
 }
 
+.underQuestionPic {
+  display: none;
+}
 @media (max-width: 414px) {
   .underQuestionPic {
     width: 100%;
@@ -465,5 +489,22 @@ article .askQuestion3 .fixAnswers div {
   }
   100% {
     translate: 0px 0px;
+  }
+}
+@keyframes firstBtn {
+  0% {
+    translate: 0px;
+  }
+  25% {
+    translate: -10px 0px;
+  }
+  50% {
+    translate: 0px;
+  }
+  75% {
+    translate: 10px 0px;
+  }
+  100% {
+    translate: 0px;
   }
 }/*# sourceMappingURL=ven.css.map */
