--- a/ven.scss
+++ b/ven.scss
@@ -2,9 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+// article //underQuestionPic
+.firstShowPic {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  background-image: url("./importantPic.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  div {
+    border: 1px white solid;
+    padding: 10px 60px;
+    border-radius: 20px;
+    animation: firstBtn 5s infinite;
+  }
 }
 article {
-  display: flex;
+  display: none;
   .askQuestion {
     transition: 0.1s;
     opacity: 1;
@@ -131,6 +152,7 @@ article {
   }
 }
 .underQuestionPic {
+  display: none;
   @media (max-width: 414px) {
     width: 100%;
     height: 80vh;
@@ -430,5 +452,22 @@ article {
   }
   100% {
     translate: 0px 0px;
+  }
+}
+@keyframes firstBtn {
+  0% {
+    translate: 0px;
+  }
+  25% {
+    translate: -10px 0px;
+  }
+  50% {
+    translate: 0px;
+  }
+  75% {
+    translate: 10px 0px;
+  }
+  100% {
+    translate: 0px;
   }
 }
