--- a/ven.scss
+++ b/ven.scss
@@ -441,6 +441,20 @@ article {
         }
       }
     }
+    .dayOneTotal {
+      width: 100%;
+      .dayOneTotalBox {
+        width: 100%;
+        height: 300px;
+        border: 1px white solid;
+        display: flex;
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
   }
 }
 @keyframes arrowMoveX {
